<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_ingredients_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/backgroundColor"
                    android:textSize="24sp"
                    android:layout_marginLeft="0dp"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/ingredients" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/tv_no_ingredients_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:text="@string/no_ingredients" />

            <TextView
                android:id="@+id/tv_steps_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="0dp"
                android:textStyle="italic"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/backgroundColor"
                android:text="@string/step_by_step" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/tv_no_review_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:text="@string/no_steps" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
